# hunspell

./: .clang-format  .cvsignore  .gitignore  .organizationmap  .travis.yml  ABOUT-NLS  AGENTS.md  AUTHORS  AUTHORS.myspell  CMakeLists.txt  ChangeLog  Dockerfile  Doxyfile  HACKING  LINGUAS  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO.md  aclocal.m4  appveyor.yml  config.h.in  configure  configure.ac  hunspell.pc.in  license.hunspell  oss-fuzz-build.sh  plan.md  run_cppcheck.sh  spec.md  tests.md  tg.po
.github/: ISSUE_TEMPLATE.md
checks/: .gitignore  README.md  clang-format.sh  cloc.sh  cppcheck.sh  pretty-print.sh  vera++.profile  vera++.sh
chocolatey/: hunspell.portable.nuspec
chocolatey/tools/: chocolateyInstall.ps1
doc/: generate.sh
doc/plantuml/: command-line-arguments-state-diagram.pu
doc/uml-state-diagrams/: README.md
docs/: ISSUE_TEMPLATE.md  Makefile.am  README.md  generate.sh  hunspell.1  hunspell.1.md  hunspell.5  hunspell.5.md
docs/grammar/: .gitignore  README.md  diagram.xhtml  grammar.ebnf  index.html  ui.ebnf  ui.xhtml
docs/plantuml/: command-line-arguments-state-diagram.pu  config.pu  top-level-usecase-diagram.pu
docs/uml-state-diagrams/: README.md
docs/uml-usecase-diagrams/: README.md
intl/: ChangeLog  Makefile.in  VERSION  bindtextdom.c  canonicalize.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.c  hash-string.h  intl-compat.c  intl-exports.c  l10nflist.c  langprefs.c  libgnuintl.h  libgnuintl.in.h  loadinfo.h  loadmsgcat.c  localcharset.c  localealias.c  localename.c  lock.c  lock.h  log.c  ngettext.c  os2compat.c  os2compat.h  osdep.c  plural-exp.c  plural-exp.h  plural.c  plural.y  (+23 more)
java/: pom.xml
java/tests/: session1_smoke.sh
m4/: ChangeLog  Makefile.am  Makefile.in  boost.m4  gettext.m4  glibc2.m4  intdiv0.m4  intl.m4  intldir.m4  intlmacosx.m4  intmax.m4  lcmessage.m4  printf-posix.m4  progtest.m4  uintmax_t.m4  visibility.m4
man/: Makefile.in  hunspell.1  hunspell.3  hunspell.4  hunspell.5
man/hu/: Makefile.in  hunspell.1
msvc/: .gitignore  Hunspell.rc  Hunspell.sln  config.h  hunspell.vcxproj  libhunspell.vcxproj  testparser.vcxproj
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile.in.in  an.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  ca.po  ckb.po  co.po  cs.po  da.po  de.po  de_CH.po  el.po  eo.po  es.po  es_EU.po  et.po  fa.po  fi.po  fr.po  fur.po  fy.po  gl.po  he.po  hi.po  hr.po  ht.po  hu.gmo  hu.po  hunspell.pot  hy.po  id.po  ie.po  (+43 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/hunspell/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  affentry.cxx  affentry.hxx  affixmgr.cxx  affixmgr.cxx.orig  affixmgr.cxx.rej  affixmgr.hxx  affixmgr.hxx.orig  affixmgr.hxx.rej  atypes.hxx  baseaffix.hxx  csutil.cxx  csutil.hxx  dictmgr.cxx  dictmgr.hxx  filemgr.cxx  filemgr.hxx  hashmgr.cxx  hashmgr.hxx  htypes.hxx  hunspell.cxx  hunspell.dsp  hunspell.h  hunspell.hxx  hunversion.h  hunversion.h.in  hunvisapi.h  hunvisapi.h.in  hunzip.cxx  hunzip.hxx  istrmgr.hxx  langnum.hxx  makefile.mk  phonet.cxx  phonet.hxx  replist.cxx  (+9 more)
src/hunspell2/: .astylerc  .clang-format  .gitignore  Makefile.am  aff_data.cxx  aff_data.hxx  aff_manager.cxx  aff_manager.hxx  astyle.sh  clang-format.sh  dic_data.cxx  dic_data.hxx  dic_manager.cxx  dic_manager.hxx  dict_finder.cxx  dict_finder.hxx  dictionary.hxx  finder.cxx  finder.hxx  hunspell.hxx  locale_utils.cxx  locale_utils.hxx  main.cxx  stream_utils.hxx  string_utils.hxx  string_utils_test.cxx
src/parsers/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  firstparser.cxx  firstparser.hxx  htmlparser.cxx  htmlparser.hxx  latexparser.cxx  latexparser.hxx  manparser.cxx  manparser.hxx  odfparser.cxx  odfparser.hxx  testparser.cxx  textparser.cxx  textparser.hxx  xmlparser.cxx  xmlparser.hxx
src/tools/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  affdicfuzzer.cxx  analyze.cxx  bulkcheck.cxx  chmorph.cxx  example.cxx  fuzzer.cxx  fuzzer.options  gen_utf_info.py  hunspell.cxx  hunzip.cxx  hzfuzzer.cxx  hzip.c  hzip.cxx  ispellaff2myspell  makealias  munch.c  munch.cxx  munch.h  parserfuzzer.cxx  persdiccrash.cxx  persdicfuzzer.cxx  persdicfuzzer.options  unmunch.c  unmunch.cxx  unmunch.h  wordforms
src/tools/optionusage/: .gitignore  analyse.py  download.sh  option-usage.md
src/win_api/: .gitignore  Hunspell.rc  Hunspell.sln  (+10 more)
tests/: .gitattributes  .gitignore  Makefile.am  Makefile.in  abi-baseline.txt  abi-check.sh  aff_data_test.cxx  agglut_bogus.aff  agglut_bogus.dic  agglut_bogus.good  agglut_bogus.wrong  agglut_max.aff  agglut_max.dic  agglut_max.good  agglut_max.wrong  agglut_nsk.aff  agglut_nsk.dic  agglut_nsk.good  agglut_nsk.wrong  allcaps.aff  apostrophe1.aff  apostrophe1.dic  apostrophe1.good  apostrophe2.aff  apostrophe2.dic  apostrophe2.good  arabic_nsm.dic  arabic_nsm.good  base.sug  base_utf.sug  catch-runner.sh  catch_main.cxx  ch.cxx  checkcompoundrep.dic  checkcompoundrep.good  checkcompoundrep.wrong  checksharps.sug  checksharpsutf.sug  clang-format.sh  compound_wnum_overflow.aff  (+104 more)
tests/hun2/: .gitignore  Makefile.am  README.md  clang-format.sh  firstoftsv.dic  firstoftsv.good  firstoftsv.wrong  simple.dic  simple.good  simple.wrong  simpleline.aff  simpleline.good  simpleline.wrong  simplenonascii.dic  simplenonascii.good  string_utils_test.cxx  test-en_US.txt  test.sh
tests/suggestiontest/: .cvsignore  .gitignore  Makefile.in  Makefile.orig  README  prepare  prepare2  test
tests/unit2/: .gitignore  Makefile.am  locale_utils_test.cxx  string_utils_test.cxx
tests/v1cmdline/: Makefile.am  break.aff  break.dic  break.good  break.wrong  checkcompoundcase2.test  checkcompoundpattern2.test  condition.test  dotless_i.dic  dotless_i.good  dotless_i.wrong  encoding.test  hu.aff  hu.dic  hu.good  hu.wrong  ph.aff  ph.sug  ph.wrong  ph2.aff  ph2.dic  ph2.good  ph2.sug  ph2.wrong  sug.aff  sug.dic  sug.sug  sug.wrong  sug2.aff  sug2.dic  sug2.sug  sug2.wrong  utf8_nonbmp.test
(+17 files in other folders)
